--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^6.14.1",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
+    "cloudinary": "^1.37.3",
     "ytdl": "^1.4.1"
   }
 }
