--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,16 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "axios": "^1.8.1",
+     "axios": "^1.8.1",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "mongodb": "^6.14.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "path": "^0.12.7",
-    "cloudinary": "^1.37.3",
     "ytdl": "^1.4.1"
   }
 }
