--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "colne of spotify",
+  "description": "Clone of Spotify",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -10,11 +10,12 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-     "axios": "^1.8.1",
+    "axios": "^1.8.1",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-sitemap": "^1.6.0",
     "fs": "^0.0.1-security",
     "mongodb": "^6.14.1",
     "multer": "^1.4.5-lts.1",
